--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -18,7 +18,7 @@ android
 
     defaultConfig
     {
-        minSdkVersion 10
+        minSdkVersion 14
         targetSdkVersion 25
         versionCode 1
         versionName releaseVersion
@@ -93,6 +93,9 @@ artifacts {
 
 dependencies
 {
+    // annotations
+    compile 'com.android.support:support-annotations:25.3.1'
+
     // event bus
     compile 'org.greenrobot:eventbus:3.0.0'
 }
