--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -93,8 +93,9 @@ artifacts {
 
 dependencies
 {
-    // annotations
+    // android
     compile 'com.android.support:support-annotations:25.3.1'
+    compile 'com.android.support:customtabs:25.3.1'
 
     // event bus
     compile 'org.greenrobot:eventbus:3.0.0'
