--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -97,6 +97,9 @@ dependencies
     compile 'com.android.support:support-annotations:25.3.1'
     compile 'com.android.support:customtabs:25.3.1'
 
+    // gson
+    compile 'com.google.code.gson:gson:2.8.0'
+
     // event bus
     compile 'org.greenrobot:eventbus:3.0.0'
 }
