--- a/androidutils/build.gradle
+++ b/androidutils/build.gradle
@@ -2,14 +2,14 @@ apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.jfrog.bintray'
 
-def releaseVersion = '0.6.0'
+def releaseVersion = '1.0.0'
 def bintrayUser = hasProperty('bintray_user') ? bintray_user : ''
 def bintrayApiKey = hasProperty('bintray_apikey') ? bintray_apikey : ''
 
 android
 {
     compileSdkVersion 25
-    buildToolsVersion '25.0.3'
+    buildToolsVersion '26.0.0'
 
     dexOptions
     {
@@ -18,7 +18,7 @@ android
 
     defaultConfig
     {
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
         versionName releaseVersion
@@ -91,15 +91,21 @@ artifacts {
     archives sourcesJar
 }
 
+ext
+{
+    support = '25.4.0'
+}
+
+
 dependencies
 {
     // android
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:support-annotations:25.3.1'
-    compile 'com.android.support:customtabs:25.3.1'
+    compile "com.android.support:appcompat-v7:$support"
+    compile "com.android.support:support-annotations:$support"
+    compile "com.android.support:customtabs:$support"
 
     // gson
-    compile 'com.google.code.gson:gson:2.8.0'
+    compile 'com.google.code.gson:gson:2.8.1'
 
     // joda time
     compile 'joda-time:joda-time:2.9.9'
