--- a/androidutils/build.gradle
+++ b/androidutils/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.jfrog.bintray'
 
-def releaseVersion = '1.0.0'
+def releaseVersion = '1.0.1'
 def bintrayUser = hasProperty('bintray_user') ? bintray_user : ''
 def bintrayApiKey = hasProperty('bintray_apikey') ? bintray_apikey : ''
 
@@ -109,6 +109,9 @@ dependencies
 
     // joda time
     compile 'joda-time:joda-time:2.9.9'
+
+    // joda time
+    compile 'com.mauriciotogneri:javautils:1.0.0'
 
     // event bus
     compile 'org.greenrobot:eventbus:3.0.0'
