--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,11 @@ buildscript
 {
     repositories
     {
+        maven
+        {
+            url "https://maven.google.com"
+        }
+
         jcenter()
     }
 
