--- a/androidutils/build.gradle
+++ b/androidutils/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.jfrog.bintray'
 
-def releaseVersion = '2.5.0'
+def releaseVersion = '2.6.0'
 def bintrayUser = hasProperty('bintray_user') ? bintray_user : ''
 def bintrayApiKey = hasProperty('bintray_apikey') ? bintray_apikey : ''
 
@@ -93,7 +93,7 @@ artifacts {
 
 ext
 {
-    support = '27.0.0'
+    support = '27.0.1'
 }
 
 dependencies
@@ -109,8 +109,8 @@ dependencies
     // joda time
     compile 'joda-time:joda-time:2.9.9'
 
-    // joda time
-    compile 'com.mauriciotogneri:javautils:1.4.0'
+    // java utils
+    compile 'com.mauriciotogneri:javautils:1.5.0'
 
     // event bus
     compile 'org.greenrobot:eventbus:3.0.0'
