--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,7 @@ buildscript
 {
     repositories
     {
-        maven
-        {
-            url "https://maven.google.com"
-        }
-
+        google()
         jcenter()
     }
 
@@ -27,11 +23,7 @@ allprojects
 {
     repositories
     {
-        maven
-        {
-            url "https://maven.google.com"
-        }
-
+        google()
         jcenter()
     }
 }
