Added compat file provider

--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,10 @@ allprojects
     repositories
     {
         google()
+
         jcenter()
+
+        maven { url 'https://s3.amazonaws.com/repo.commonsware.com' }
     }
 }
 
