--- a/androidutils/build.gradle
+++ b/androidutils/build.gradle
@@ -95,4 +95,7 @@ dependencies
 
     // event bus
     implementation 'org.greenrobot:eventbus:3.1.1'
+
+    // file provider
+    implementation 'com.commonsware.cwac:provider:0.5.3'
 }
