--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript
 
     dependencies
     {
-        classpath 'com.android.tools.build:gradle:3.1.4'
+        classpath 'com.android.tools.build:gradle:3.2.0'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.0'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
     }
@@ -27,7 +27,10 @@ allprojects
 
         jcenter()
 
-        maven { url 'https://s3.amazonaws.com/repo.commonsware.com' }
+        maven
+        {
+            url 'https://s3.amazonaws.com/repo.commonsware.com'
+        }
     }
 }
 
